logs/tesseract.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tesseract'...
Compiling './lib/python3.5/site-packages/tesseract/__init__.py'...
***   File "./lib/python3.5/site-packages/tesseract/__init__.py", line 34
    print 'Creating user config file: {}'.format(_config_file_usr)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tesseract/halos'...
Compiling './lib/python3.5/site-packages/tesseract/io.py'...
***   File "./lib/python3.5/site-packages/tesseract/io.py", line 50
    print 80*'='
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tesseract/nfw.py'...
***   File "./lib/python3.5/site-packages/tesseract/nfw.py", line 344
    print '    '+plotfile
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tesseract/tests.py'...
***   File "./lib/python3.5/site-packages/tesseract/tests.py", line 283
    print 'Fixing miss-matched dir.'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tesseract/voro.py'...
***   File "./lib/python3.5/site-packages/tesseract/voro.py", line 53
    print 'That is not a valid directory.'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tesseract/vorovol'...
Listing './lib/python3.5/site-packages/tesseract-0.1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
